fixed landing screen spacing

--- a/src/screens/Landing/styles.css
+++ b/src/screens/Landing/styles.css
@@ -4,13 +4,13 @@
   background-position-y: 80px;
   background-position-x: 40px;
   background-repeat: no-repeat;
-  height: calc(100vh - 150px);
+  height: calc(100vh - 190px);
   overflow: hidden;
   padding: 40px;
 }
 
 #landing-jumbo-wrapper {
-  margin: 300px 90px;
+  margin: 200px 90px;
 }
 
 #landing-jumbo-header {
